--- a/frrbnb-web/package.json
+++ b/frrbnb-web/package.json
@@ -7,6 +7,7 @@
     "material-ui": "^0.20.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
+    "react-responsive": "^4.1.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4"
   },
